// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditDashboard renders dashboard 1`] = `
<div>
  <div>
    EditBar
  </div>
  <div
    class="dashboard-wrapper"
    style="height: 656px;"
  >
    <div>
      EditTitleBar
    </div>
    <div>
      EditItemGrid
    </div>
  </div>
</div>
`;

exports[`EditDashboard renders message when not enough access 1`] = `
<div>
  <div>
    EditBar
  </div>
  <div
    style="padding: 50px 10px; text-align: center; font-size: 15px; font-weight: 500; color: rgb(110, 122, 138);"
  >
    No access
  </div>
</div>
`;

exports[`EditDashboard renders print preview 1`] = `
<div>
  <div>
    EditBar
  </div>
  <div>
    LayoutPrintPreview
  </div>
</div>
`;
